tests/toy/pos/000083_cdrc2.toylang
program a = { if a == a then { } else sleep; } .
