tests/toy/neg/001125_mutation.toylang
program a = { if if then sleep; } .
